26.1.2 初步移植