@@ -17,34 +17,32 @@ public class EmotionData {
     // ===== 获取情感值（UUID 版本） =====
     public static EmotionValues get(EntityMaid maid, UUID playerId) {
         CompoundTag root = maid.getPersistentData();
-        CompoundTag emotionMap = root.getCompound(EMOTION_TAG);
-        CompoundTag playerData = emotionMap.getCompound(playerId.toString());
-        int trust = playerData.getInt("trust");
-        int fear = playerData.getInt("fear");
-        if (trust == 0 && !playerData.contains("trust")) trust = 40;
-        if (fear == 0 && !playerData.contains("fear")) fear = 10;
+        CompoundTag emotionMap = root.getCompound(EMOTION_TAG).orElse(new CompoundTag());
+        CompoundTag playerData = emotionMap.getCompound(playerId.toString()).orElse(new CompoundTag());
+        int trust = playerData.getInt("trust").orElse(40);
+        int fear = playerData.getInt("fear").orElse(10);
         return new EmotionValues(trust, fear);
     }
 
     public static void set(EntityMaid maid, UUID playerId, int trust, int fear) {
         CompoundTag root = maid.getPersistentData();
-        CompoundTag emotionMap = root.getCompound(EMOTION_TAG);
+        CompoundTag emotionMap = root.getCompound(EMOTION_TAG).orElse(new CompoundTag());
         CompoundTag playerData = new CompoundTag();
-        playerData.putInt("trust", Math.max(0, Math.min(100, trust)));
-        playerData.putInt("fear", Math.max(0, Math.min(100, fear)));
+        playerData.putInt("trust", Math.clamp(trust, 0, 100));
+        playerData.putInt("fear", Math.clamp(fear, 0, 100));
         emotionMap.put(playerId.toString(), playerData);
         root.put(EMOTION_TAG, emotionMap);
     }
 
     public static void addTrust(EntityMaid maid, UUID playerId, int delta) {
         EmotionValues current = get(maid, playerId);
-        int newTrust = Math.max(0, Math.min(100, current.trust + delta));
+        int newTrust = Math.clamp(current.trust + delta, 0, 100);
         set(maid, playerId, newTrust, current.fear);
     }
 
     public static void addFear(EntityMaid maid, UUID playerId, int delta) {
         EmotionValues current = get(maid, playerId);
-        int newFear = Math.max(0, Math.min(100, current.fear + delta));
+        int newFear = Math.clamp(current.fear + delta, 0, 100);
         set(maid, playerId, current.trust, newFear);
     }
 
@@ -57,10 +55,10 @@ public class EmotionData {
     public static EmotionTendency getTendency(EntityMaid maid, UUID playerId) {
         EmotionValues v = get(maid, playerId);
         if (v.trust >= 70 && v.fear <= 20) return EmotionTendency.BOND;
+        if (v.trust <= 20 && v.fear >= 70) return EmotionTendency.TERRIFIED;
         if (v.trust >= 40 && v.fear <= 30) return EmotionTendency.FRIENDLY;
         if (v.trust <= 30 && v.fear <= 20) return EmotionTendency.STRANGER;
         if (v.trust <= 40 && v.fear >= 50) return EmotionTendency.FEARFUL;
-        if (v.trust <= 20 && v.fear >= 70) return EmotionTendency.TERRIFIED;
         if (v.trust >= 60 && v.fear >= 60) return EmotionTendency.CONFLICTED;
         return EmotionTendency.NEUTRAL;
     }
